[package]
name = "safe-buffer"
version = "0.4.1"
edition = "2021"
description = "Out of memory safe chunked binary buffer"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
rand = "0.9.0-alpha.2"
zip = { version = "2.2.0", default-features = false }
reqwest = { version = "0.12.7", features = ["blocking"] }
